[package]
authors = ["Mick van Gelderen <mickvangelderen@gmail.com>"]
name = "glw"
version = "0.1.0"

[features]
default = []
prevent_drop_abort = [ "prevent_drop/abort" ]
prevent_drop_panic = [ "prevent_drop/panic" ]

[dependencies]
gl = "0.10.0"
static_assertions = "0.2.5"
prevent_drop = { path = "../../prevent_drop" }

[dev-dependencies]
glutin = "0.18.0"
lazy_static = "1.0.0"
prevent_drop = { path = "../../prevent_drop", features = [ "panic" ] }
